fixed roles gap

--- a/src/App.css
+++ b/src/App.css
@@ -49,8 +49,8 @@
 display: flex;
 flex-direction: row;
 width: 80%;
-justify-content:  center;
-flex: 1;
+justify-content: center;
+/* flex: 0; */
 flex-wrap: wrap
 
 /* align-items: center; */
